upd minor styles

--- a/apps/mix-portal/src/app/routes/portal/portal.layout.scss
+++ b/apps/mix-portal/src/app/routes/portal/portal.layout.scss
@@ -1,15 +1,16 @@
 .cms-portal-container {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-
-  &__workspace {
-    width: 100%;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-  }
-
-  &__main-workspace {
-    width: 100%;
-    box-sizing: border-box;
-  }
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    // background: url(/assets/images/backgrounds/curved.jpg);
+    // background-size: cover;
+    // background-position: 50%;
+    &__workspace {
+        width: 100%;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    }
+    &__main-workspace {
+        width: 100%;
+        box-sizing: border-box;
+    }
 }
