--- a/libs/mix.share/src/components/side-menu/side-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.html
@@ -5,7 +5,8 @@
         </div>
 
         <ng-container *ngFor="let item of menuItems">
-            <div class="side-menu__level-1-icon" [ngClass]="{'--active': currentSelectedItem?.id === item?.id}" [tuiHint]="tooltip" [tuiHintHideDelay]="0" [tuiHintMode]="'onDark'" [tuiHintShowDelay]="200" (click)="itemSelect(item)" tuiHintDirection="right">
+            <div class="side-menu__level-1-icon" [ngClass]="{'--active': currentSelectedItem?.id === item?.id, 'mt-auto': item.position === VerticalDisplayPosition.Bottom}" [tuiHint]="tooltip" [tuiHintHideDelay]="0" [tuiHintMode]="'onDark'" [tuiHintShowDelay]="200"
+                (click)="itemSelect(item)" tuiHintDirection="right">
                 <i-tabler name="{{item.icon}}"></i-tabler>
 
                 <ng-template #tooltip>
