feat(portal): add delete api

--- a/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.html
+++ b/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.html
@@ -1,7 +1,7 @@
 <mix-workspace-dynamic-layout>
   <div class="polymorphous-list__header"
        header>
-    <div>{{ pageCount }} {{ contentConfig[listType].header }}</div>
+    <div>{{ itemCount }} {{ contentConfig[listType].header }}</div>
     <div class="separator"></div>
 
     <mix-toolbar [selectedItem]="currentSelectedItems"></mix-toolbar>
