--- a/libs/mix.share/src/components/mix-toolbar/mix-toolbar.component.html
+++ b/libs/mix.share/src/components/mix-toolbar/mix-toolbar.component.html
@@ -9,6 +9,7 @@
        [tuiHintHideDelay]="0"
        [tuiHintMode]="'onDark'"
        [tuiHintShowDelay]="50"
+       (click)="onDelete()"
        tuiHintDirection="bottom-middle">
     <i-tabler name="trash"></i-tabler>
     <ng-template #tooltip>
