--- a/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.scss
+++ b/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.scss
@@ -3,12 +3,15 @@ mix-data-table {
 }
 
 .polymorphous-list {
+  width: 100%;
+  height: 100%;
+
   &__header {
     background-color: #f0f4f9;
-    height: 100%;
     display: flex;
     align-items: center;
-    padding: 0 15px;
+    padding: 5px 15px;
+    border-bottom: 1px solid var(--tui-base-04);
 
     .separator {
       content: '';
@@ -17,6 +20,38 @@ mix-data-table {
       width: 1px;
       background-color: var(--tui-base-04);
       margin: 0 15px 0 25px;
+    }
+
+    .toggle-left-side {
+      margin-left: auto;
+    }
+  }
+
+  &__container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__main-workspace {
+    width: 100%;
+    height: 100%;
+  }
+
+  &__left-side {
+    width: 450px;
+    border-left: 1px solid var(--tui-base-04);
+    padding: 10px;
+
+    .widget {
+      background-color: #fff;
+      border-radius: 10px;
+      padding: 10px;
+      border: 1px solid var(--tui-base-04);
+
+      [tuiLabel] {
+        margin-bottom: 15px;
+      }
     }
   }
 }
