--- a/libs/mix.share/src/components/workspace-dynamic-layout/workspace-dynamic.component.html
+++ b/libs/mix.share/src/components/workspace-dynamic-layout/workspace-dynamic.component.html
@@ -8,7 +8,7 @@
 
   </div>
 
-  <div class="workspace-dynamic-layout__left-toolbar">
-    <ng-content select="[toolbar]"></ng-content>
+  <div class="workspace-dynamic-layout__left-side">
+    <ng-content select="[left-side]"></ng-content>
   </div>
 </div>
