feat(list): add chat area

--- a/apps/mix-portal/src/styles/overwrite.scss
+++ b/apps/mix-portal/src/styles/overwrite.scss
@@ -1,4 +1,6 @@
 :root {
+  --mix-border-radius-01: 10px;
+
   --primary-color-hue: 220;
   --primary-color-saturation: 50%;
   --primary-color-brightness: 50%;
