--- a/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.scss
+++ b/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.scss
@@ -30,7 +30,9 @@ mix-data-table {
   &__container {
     display: flex;
     width: 100%;
-    height: 100%;
+
+    // 100px for header + toolbar
+    height: calc(100vh - 100px);
   }
 
   &__main-workspace {
@@ -39,11 +41,13 @@ mix-data-table {
   }
 
   &__left-side {
-    width: 450px;
+    width: 350px;
     border-left: 1px solid var(--tui-base-04);
     padding: 10px;
+    display: flex;
+    flex-direction: column;
 
-    .widget {
+    .filter {
       background-color: #fff;
       border-radius: 10px;
       padding: 10px;
@@ -52,6 +56,10 @@ mix-data-table {
       [tuiLabel] {
         margin-bottom: 15px;
       }
+    }
+
+    .chatbox {
+      margin-top: auto;
     }
   }
 }
