feat(list): add user in hub

--- a/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.html
+++ b/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.html
@@ -85,7 +85,7 @@
       </div>
 
       <div class="chatbox">
-        <mix-chat-box></mix-chat-box>
+        <mix-user-list-hub></mix-user-list-hub>
       </div>
     </div>
   </div>
