--- a/apps/mix-portal/src/app/routes/portal/portal.layout.html
+++ b/apps/mix-portal/src/app/routes/portal/portal.layout.html
@@ -6,6 +6,10 @@
       <router-outlet></router-outlet>
     </div>
   </div>
+
+  <div class="cms-portal-container__chat-bubble">
+    <mix-chat-box></mix-chat-box>
+  </div>
 </div>
 
 <ng-template let-observer [(tuiDialog)]="isShowUniversalSearch">
