--- a/apps/mix-portal/src/app/routes/init/components/init-themes/init-themes.component.html
+++ b/apps/mix-portal/src/app/routes/init/components/init-themes/init-themes.component.html
@@ -1,36 +1,25 @@
 <div class="init-themes mix-form">
-  <h3 class="mix-form__header">Step 3: Choose your themes</h3>
+    <h3 class="mix-form__header">Step 3: Choose Your Theme</h3>
 
-  <div class="mix-form__row">
-    <div class="init-themes__theme-card">
-      <div class="init-themes__theme-card-title"> {{ currentSelectedTheme ? currentSelectedTheme.title : 'Blank' }} </div>
-      <button *ngIf="currentSelectedTheme"
-              tuiButton
-              size="s"
-              appearance="primary"> View </button>
+    <div class="mix-form__row">
+        <div class="init-themes__theme-card">
+            <div class="init-themes__theme-card-title"> {{ currentSelectedTheme ? currentSelectedTheme.title : 'Blank' }}
+            </div>
+            <button *ngIf="currentSelectedTheme" tuiButton size="s" appearance="primary"> View </button>
+        </div>
     </div>
-  </div>
 
-  <div class="mix-form__toolbar-left">
-    <button [pseudo]="true"
-            (click)="showDialog(importTheme)"
-            tuiLink>Browse theme</button>
-  </div>
+    <div class="mix-form__toolbar-left">
+        <button [pseudo]="true" (click)="showDialog(importTheme)" tuiLink>Browse theme</button>
+    </div>
 
-  <div class="mix-form__toolbar-right init-themes__submit">
-    <button [disabled]="loading"
-            [pseudo]="true"
-            tuiLink>Back</button>
-    <button [disabled]="loading"
-            [showLoader]="loading"
-            (click)="submitTheme()"
-            tuiButton>Submit</button>
-  </div>
+    <div class="mix-form__toolbar-right init-themes__submit">
+        <button [disabled]="loading" [pseudo]="true" tuiLink>Back</button>
+        <button [disabled]="loading" [showLoader]="loading" (click)="submitTheme()" tuiButton>Submit</button>
+    </div>
 </div>
 
 
-<ng-template #importTheme
-             let-observer>
-  <mix-theme-import (cancel)="observer.complete()"
-                    (themeSelect)="onThemeChoose($event)"></mix-theme-import>
+<ng-template #importTheme let-observer>
+    <mix-theme-import (cancel)="observer.complete()" (themeSelect)="onThemeChoose($event)"></mix-theme-import>
 </ng-template>
