--- a/libs/mix.share/src/components/side-menu/side-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.html
@@ -1,5 +1,4 @@
-<div *ngIf="menuItems"
-     class="side-menu">
+<div *ngIf="menuItems" class="side-menu">
   <div class="side-menu__level-1">
     <div class="side-menu__level-1-logo">
       <div class="login-form-logo-square"></div>
@@ -7,13 +6,9 @@
 
     <ng-container *ngFor="let item of menuItems">
       <div class="side-menu__level-1-icon"
-           [ngClass]="{'--active': currentSelectedItem?.id === item?.id, 'mt-auto': item.position === VerticalDisplayPosition.Bottom}"
-           [tuiHint]="tooltip"
-           [tuiHintHideDelay]="0"
-           [tuiHintMode]="'onDark'"
-           [tuiHintShowDelay]="200"
-           (click)="itemSelect(item)"
-           tuiHintDirection="right">
+        [ngClass]="{'--active': currentSelectedItem?.id === item?.id, 'mt-auto': item.position === VerticalDisplayPosition.Bottom}"
+        [tuiHint]="tooltip" [tuiHintHideDelay]="0" [tuiHintMode]="'onDark'" [tuiHintShowDelay]="200"
+        (click)="itemSelect(item)" tuiHintDirection="right">
         <i-tabler name="{{item.icon}}"></i-tabler>
 
         <ng-template #tooltip>
@@ -25,15 +20,12 @@
     </ng-container>
   </div>
 
-  <div *ngIf="currentSelectedItem"
-       class="side-menu__level-2"
-       [@enterAnimation]>
+  <div *ngIf="currentSelectedItem" class="side-menu__level-2" [@enterAnimation]>
     <div class="side-menu__level-2-title"> {{ currentSelectedItem.title }} </div>
 
     <div class="side-menu__level-2-content">
       <ng-container *ngFor="let menu of currentSelectedItem.detail">
-        <div class="side-menu__detail-item"
-             (click)="itemClick(menu)">
+        <div class="side-menu__detail-item" (click)="itemClick(menu)">
           <i-tabler name="{{menu.icon}}"></i-tabler>
           <div>
             {{ menu.title }}
@@ -41,13 +33,11 @@
         </div>
       </ng-container>
 
-      <div class="separator"></div>
+      <!-- <div class="separator"></div> -->
     </div>
   </div>
 
-  <div *ngIf="currentSelectedItem"
-       class="side-menu__collapse-icon"
-       (click)="currentSelectedItem = undefined">
-    <i-tabler name="arrow-bar-left"></i-tabler>
+  <div *ngIf="currentSelectedItem" class="side-menu__collapse-icon" (click)="currentSelectedItem = undefined">
+    <i-tabler name="minus"></i-tabler>
   </div>
 </div>
