--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -1,104 +1,105 @@
 .side-menu {
+  height: 100%;
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  &__level-1 {
     height: 100%;
-    box-sizing: border-box;
+    padding: 5px 5px 5px 5px;
+    border-right: 1px solid var(--tui-base-04);
     display: flex;
-    position: relative;
-    &__level-1 {
-        height: 100%;
-        padding: 5px 5px 5px 5px;
-        border-right: 1px solid var(--tui-base-04);
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        // Temporary remove background for now
-        // background: rgb(214, 220, 234);
-        // background: linear-gradient(300deg, rgba(214, 220, 234, 1) 41%, rgba(148, 207, 233, 1) 100%);
+    align-items: center;
+    flex-direction: column;
+    // Temporary remove background for now
+    // background: rgb(214, 220, 234);
+    // background: linear-gradient(300deg, rgba(214, 220, 234, 1) 41%, rgba(148, 207, 233, 1) 100%);
+  }
+  &__level-1-logo {
+    margin-bottom: 15px;
+    .login-form-logo-square {
+      width: 40px;
+      height: 35px;
+      background-color: var(--tui-primary);
+      -webkit-mask: url(/assets/images/mixcore-logo-red-square.svg) no-repeat
+        50% 50%;
+      mask: url(/assets/images/mixcore-logo-red-square.svg) no-repeat 50% 50%;
     }
-    &__level-1-logo {
-        margin-bottom: 15px;
-        .login-form-logo-square {
-            width: 40px;
-            height: 35px;
-            background-color: var(--tui-primary);
-            -webkit-mask: url(/assets/images/mixcore-logo-red-square.svg) no-repeat 50% 50%;
-            mask: url(/assets/images/mixcore-logo-red-square.svg) no-repeat 50% 50%;
-        }
+  }
+  &__level-1-icon {
+    margin-bottom: 5px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: var(--tui-radius-l);
+    &:hover {
+      background-color: var(--tui-primary-hover);
     }
-    &__level-1-icon {
-        margin-bottom: 5px;
-        width: 40px;
-        height: 40px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        border-radius: 6px;
-        &:hover {
-            background-color: var(--tui-primary-hover);
-        }
-        &.--active {
-            background-color: var(--tui-primary-active);
-            color: var(--tui-text-01-night);
-        }
+    &.--active {
+      background-color: var(--tui-primary-active);
+      color: var(--tui-text-01-night);
     }
-    &__level-2 {
-        height: 100%;
-        width: 200px;
+  }
+  &__level-2 {
+    height: 100%;
+    width: 255px;
+  }
+  &__level-2-title {
+    height: var(--mix-header-height);
+    border-bottom: 1px solid var(--tui-base-04);
+    font-size: 16px;
+    font-weight: 500;
+    padding: 0 0 0 32px;
+    display: flex;
+    align-items: center;
+  }
+  &__level-2-content {
+    padding: 24px 24px 5px 24px;
+  }
+  &__detail-item {
+    cursor: pointer;
+    border-radius: 8px;
+    padding: 8px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    transition: background 0.8s;
+    > i-tabler {
+      margin-right: 15px;
+      width: 18px;
+      height: 18px;
     }
-    &__level-2-title {
-        height: var(--mix-header-height);
-        border-bottom: 1px solid var(--tui-base-04);
-        font-size: 16px;
-        font-weight: 500;
-        padding: 0 0 0 16px;
-        display: flex;
-        align-items: center;
+    &:hover {
+      background-color: var(--tui-primary-hover);
     }
-    &__level-2-content {
-        padding: 14px 8px 5px 8px;
+    &:active {
+      background-color: #e8f0f7;
+      background-size: 100%;
+      transition: background 0s;
     }
-    &__detail-item {
-        cursor: pointer;
-        border-radius: 8px;
-        padding: 8px;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        font-size: 14px;
-        transition: background 0.8s;
-        >i-tabler {
-            margin-right: 15px;
-            width: 18px;
-            height: 18px;
-        }
-        &:hover {
-            background-color: var(--tui-primary-hover);
-        }
-        &:active {
-            background-color: #e8f0f7;
-            background-size: 100%;
-            transition: background 0s;
-        }
-    }
-    &__collapse-icon {
-        position: absolute;
-        width: 40px;
-        height: 40px;
-        bottom: 8px;
-        right: 8px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        border-radius: 12px;
-        background-color: #e8f0f7;
-    }
-    .separator {
-        content: '';
-        display: block;
-        height: 1px;
-        width: 100%;
-        background: var(--tui-base-04);
-        margin: 15px 0;
-    }
+  }
+  &__collapse-icon {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: 3px;
+    right: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 12px;
+    // background-color: #e8f0f7;
+  }
+  .separator {
+    content: '';
+    display: block;
+    height: 1px;
+    width: 100%;
+    background: var(--tui-base-04);
+    margin: 15px 0;
+  }
 }
