--- a/libs/mix.share/src/components/data-table/data-table.component.html
+++ b/libs/mix.share/src/components/data-table/data-table.component.html
@@ -159,7 +159,7 @@
 
     <div *ngIf="showSubTable"
          class="mix-data-table__transfer-icon">
-      <img src="assets/images/icons8-transfer-64.png">
+      <i-tabler name="square-toggle"></i-tabler>
     </div>
 
     <div class="mix-data-table__sub-table"
