feat(portal): add database visualize

--- a/apps/mix-portal/src/styles.scss
+++ b/apps/mix-portal/src/styles.scss
@@ -15,8 +15,10 @@ body {
 
 :root {
   --mix-header-height: 47px;
-  --font-family: 'Lexend Deca', 'Roboto', -apple-system, BlinkMacSystemFont, 'Apple Color Emoji', 'Segoe UI', Oxygen, Ubuntu, Cantarell,
-    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  --mix-sub-header-height: 47px;
+  --font-family: 'Lexend Deca', 'Roboto', -apple-system, BlinkMacSystemFont,
+    'Apple Color Emoji', 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
 .cdk-drag-preview {
