--- a/apps/mix-portal/src/app/routes/portal/portal.layout.scss
+++ b/apps/mix-portal/src/app/routes/portal/portal.layout.scss
@@ -6,12 +6,12 @@
 
   &__workspace {
     width: 100%;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    border-left: 1px solid var(--tui-base-04);
   }
 
   &__main-workspace {
     width: 100%;
-    height: 100%;
+    height: calc(100vh - var(--mix-header-height));
     box-sizing: border-box;
   }
 
