--- a/libs/mix.share/src/components/mix-database-graph/mix-database-graph.component.scss
+++ b/libs/mix.share/src/components/mix-database-graph/mix-database-graph.component.scss
@@ -7,6 +7,10 @@
   overflow: hidden;
   position: relative;
 
+  .canvas {
+    display: flex;
+  }
+
   &__item {
     width: fit-content;
     height: fit-content;
