add smooth zoom

--- a/libs/mix.share/src/components/mix-database-graph/mix-database-graph.component.html
+++ b/libs/mix.share/src/components/mix-database-graph/mix-database-graph.component.html
@@ -11,6 +11,6 @@
   </div>
 
   <div class="mix-database-graph__zoom-info">
-    Zoom: {{ (zoomScale * 100).toFixed(2) }}% | Use Mouse Wheel to zoom In/Out
+    Zoom: {{ (zoomScale * 100).toFixed(2) }}% | Use Mouse Wheel to zoom in/out
   </div>
 </div>
